plugins {
    id 'java'
    id 'application'
}

repositories {
    mavenCentral()
}

def osName = System.getProperty("os.name").toLowerCase()
def platform = osName.contains("win") ? "win" : osName.contains("mac") ? "mac" : "linux"

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'com.google.guava:guava:32.1.2-jre'
    implementation "org.openjfx:javafx-base:21:${platform}"
    implementation "org.openjfx:javafx-graphics:21:${platform}"
    implementation "org.openjfx:javafx-controls:21:${platform}"
    implementation "org.openjfx:javafx-fxml:21:${platform}"
}

java {
    modularity.inferModulePath.set(true)
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    // Define the main class for the application.
    mainClass = 'dissertation.Main'
}

tasks.named('test') {
    useJUnitPlatform()
}

run {
    doFirst {
        jvmArgs = [
            '--module-path', classpath.asPath,
            '--add-modules', 'javafx.controls,javafx.fxml'
        ]
    }
}